handle material-design-icons

--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -2,3 +2,7 @@
 @import "ember-cli-bootstrap-4/bootstrap";
 
 @import "vendor/beagle-v1.4.2/BS4/src/assets/css/app.scss";
+
+@import "vendor/beagle-v1.4.2/BS4/dist/html/assets/lib/material-design-icons/css/material-design-iconic-font.scss";
+
+@import "vendor/beagle-v1.4.2/BS4/dist/html/assets/lib/material-design-icons/css/material-design-iconic-font.min.scss";
