insert page-component in template

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,3 +1,4 @@
+{{#page-component}}
 <div class="be-wrapper be-fixed-sidebar">
   <nav class="navbar navbar-expand fixed-top be-top-header">
     <div class="container-fluid">
@@ -838,3 +839,4 @@
     </div>
   </nav>
 </div>
+{{/page-component}}
