import perfect scrollbar css

--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -6,3 +6,5 @@
 @import "vendor/beagle-v1.4.2/BS4/dist/html/assets/lib/material-design-icons/scss/material-design-iconic-font.scss";
 
 @import "vendor/beagle-v1.4.2/BS4/dist/html/assets/lib/material-design-icons/scss/material-design-iconic-font.min.scss";
+
+@import "vendor/beagle-v1.4.2/BS4/dist/html/assets/lib/perfect-scrollbar/css/perfect-scrollbar";
